Bug 622503 - Build failure when JS_TRACER is not defined r=gal, gregor